--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-Django==4.1.6
+asgiref==3.6.0
+Django==4.2
 django-bootstrap5==22.2
-Pillow==9.4.0
+djangorestframework==3.14.0
+Pillow==9.5.0
+psycopg2-binary==2.9.6
+pytz==2023.3
+sqlparse==0.4.3
